Añadido Readme, añadido evento JSON y llamada AJAX y otros cambios menores

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -32,7 +32,9 @@
         </div>
     {% endfor %}
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        {% block javascripts %}
+            <script   src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+        {% endblock %}
 
     </body>
 </html>
