--- a/src/Yoda/EventBundle/Resources/views/event/edit.html.twig
+++ b/src/Yoda/EventBundle/Resources/views/event/edit.html.twig
@@ -4,7 +4,7 @@
     <section class="event-show event-edit">
         <header id="menu">
             <a class="link" href="{{ path('event_index') }}">&larr; Volver a la lista de eventos</a>
-            <a class="link" href="{{ path('event_show', {'id': event.id}) }}">Mostrar eventos</a>
+            <a class="link" href="{{ path('event_show', {'id': event.id}) }}">Mostrar evento</a>
         </header>
 
         <article>
